# parse_orders_csv

./: .gitignore  README.md  classes.py  file_io.py  functions.py  main.py  pyproject.toml
csv/: demars_farms_csa_manifest_2023.csv  demars_farms_csa_orders_2023 copy.csv  demars_farms_csa_orders_2023.csv  demars_farms_orders_2022.csv  new_demars_farms_orders.csv  old_demars_farms_orders_2022.csv
demars_orders/: __init__.py  constants.py  file_dialogs.py  fulfillment.py  orders.py  product_options.py  reports.py  text_utils.py  workbook.py
objects/: order.py  product.py
