[project]
name = "demars-csa-order-processor"
version = "2.0.0"
description = "Convert DeMars Farms Weebly CSA order exports into seasonal workbooks and OptimoRoute import files."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "xlsxwriter>=3.0",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []
